# hanwhalinup

./: GITHUB_ISSUES.md  PRD.md  PROJECT_RULES.md  README.md  TASKS.md  TECH_SPEC.md  index.html  jest.config.js  package.json  presentation.md  style.css
.github/workflows/: deploy.yml  update-roster.yml
data_pipeline/: crawl_and_process.py  pyproject.toml
design/: code.html  code2.html  code3.html
scripts/: README.md  integration_test.js  update_roster.py
src/: main.js
src/core/: BaseSystem.js  GameSimulator.js  GameState.js  Lineup.js  LiveSubSimulator.js  Optimizer.js  OutcomeGenerator.js  Player.js  StatsAggregator.js
src/data/: roster.js
src/ui/: UIManager.js
tests/: BaseSystem.test.js  GameSimulator.test.js  GameState.test.js  Lineup.test.js  Optimizer.test.js  OutcomeGenerator.test.js  Player.test.js
